Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "learnelixir.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNvaEpTDMheKls9iX5+HgYf",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNQ8uOhrGe31L837zx+a6Sz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +77,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 1,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -5135,15 +5136,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "UwJ2jrfXcvhj"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 構造体 struct \n",
@@ -5156,16 +5148,18 @@
         "\n",
         "defmodule Main do\n",
         "  IO.inspect %Example.User{}\n",
+        "  IO.inspect %Example.User{name: \"Steve\"}\n",
+        "  IO.inspect %Example.User{name: \"Steve\", roles: [:manager]}\n",
         "end"
       ],
       "metadata": {
         "id": "_5D0C1FdnE9-",
-        "outputId": "e37217d8-61f5-4dcb-a316-c00c82261fe7",
+        "outputId": "589c3f88-8715-4420-c129-2dc795a9b575",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -5183,12 +5177,115 @@
       ],
       "metadata": {
         "id": "4hRQw409eMTP",
-        "outputId": "5741a3cc-3734-4a0a-a1b6-2e4a013835e9",
+        "outputId": "584e57bb-151f-48ee-e8ba-bf3778b88350",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "%Example.User{name: \"Sean\", roles: []}\n",
+            "%Example.User{name: \"Steve\", roles: []}\n",
+            "%Example.User{name: \"Steve\", roles: [:manager]}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 構造体の更新\n",
+        "%%writefile temp.exs\n",
+        "defmodule Example.User do\n",
+        "  defstruct name: \"Sean\", roles: []\n",
+        "end\n",
+        "\n",
+        "defmodule Main do\n",
+        "  steve = %Example.User{name: \"Steve\"}\n",
+        "  IO.inspect %{steve | name: \"Sean\"}\n",
+        "  IO.inspect steve\n",
+        "end"
+      ],
+      "metadata": {
+        "id": "pg8PBjgIeIQw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "metadata": {
+        "id": "NvJWdBfAlnZ0",
+        "outputId": "c8734cb7-c832-4909-8ec5-705a3ae6b33d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "%Example.User{name: \"Sean\", roles: []}\n",
+            "%Example.User{name: \"Steve\", roles: []}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 構造体の更新とマッチング\n",
+        "%%writefile temp.exs\n",
+        "defmodule Example.User do\n",
+        "  defstruct name: \"Sean\", roles: []\n",
+        "end\n",
+        "\n",
+        "defmodule Main do\n",
+        "  steve = %Example.User{name: \"Steve\"}\n",
+        "  sean = %{steve | name: \"Sean\"}\n",
+        "  IO.inspect %{name: \"Sean\"} = sean\n",
+        "end"
+      ],
+      "metadata": {
+        "id": "wv-S1UExnGkX",
+        "outputId": "78f75198-c7ac-4c3a-e637-0e6f551e53c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.exs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "metadata": {
+        "id": "Z717YY4-ndTs",
+        "outputId": "55eda2b9-c07c-4349-f8f8-efbcdbe577f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -5202,55 +5299,70 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
-        "\n",
-        "%Example.User{name: \"Steve\"}\n",
-        "%Example.User<name: \"Steve\", roles: [], ...>\n",
-        "\n",
-        "%Example.User{name: \"Steve\", roles: [:manager]}\n",
-        "%Example.User<name: \"Steve\", roles: [:manager]>\n",
-        "\n",
-        "構造体はあたかもマップのように更新することができます:\n",
-        "\n",
-        "steve = %Example.User{name: \"Steve\"}\n",
-        "%Example.User<name: \"Steve\", roles: [...], ...>\n",
-        "sean = %{steve | name: \"Sean\"}\n",
-        "%Example.User<name: \"Sean\", roles: [...], ...>\n",
-        "\n",
-        "最も重要なことですが、構造体はマップに対してマッチすることができます:\n",
-        "\n",
-        "%{name: \"Sean\"} = sean\n",
-        "%Example.User<name: \"Sean\", roles: [...], ...>\n",
-        "\n",
-        "Elixir 1.8以降、構造体にカスタムイントロスペクション機能が追加されました。\n",
-        "\n",
-        "カスタムイントロスペクションがどのように使われるのかを理解するため、 sean の中身を見てみましょう。\n",
-        "\n",
-        "inspect(sean)\n",
-        "\"%Example.User<name: \\\"Sean\\\", roles: [...], ...>\"\n",
-        "\n",
-        "この例では全てのフィールドが出力対象になっていますが、出力したくない項目がある場合、どのようにしたら良いでしょうか？ この場合、 @derive を利用することで実現することができます！ roles を出力から除外したい場合、以下のように記述しる\n",
-        "\n",
+        "# inspect の出力を変える\n",
+        "%%writefile temp.exs\n",
         "defmodule Example.User do\n",
-        "  @derive {Inspect, only: [:name]}\n",
-        "  defstruct name: nil, roles: []\n",
+        "  # @derive {Inspect, only: [:name]}\n",
+        "  @derive {Inspect, except: [:roles]}\n",
+        "  defstruct name: \"Sean\", roles: []\n",
         "end\n",
-        "注記： @derive {Inspect, except: [:roles]} でも実現することができる\n",
         "\n",
-        "モジュールを更新したら、 iex で確認してみましょう。\n",
+        "defmodule Main do\n",
+        "  steve = %Example.User{name: \"Steve\"}\n",
+        "  sean = %{steve | name: \"Sean\"}\n",
+        "  IO.inspect %{name: \"Sean\"} = sean\n",
+        "end"
+      ],
+      "metadata": {
+        "id": "zyJz4vZBoWE5",
+        "outputId": "925cef85-914e-4db9-e782-472108654d9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.exs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "metadata": {
+        "id": "4ClqLVPqoy0Z",
+        "outputId": "83f74ac9-47ba-4c13-f289-d5b34def53de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "#Example.User<name: \"Sean\", ...>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# コンポジション(Composition)\n",
+        "# コンポジションを用いてモジュールや構造体に既存の機能を追加する\n",
         "\n",
-        "sean = %Example.User{name: \"Sean\"}\n",
-        "%Example.User<name: \"Sean\", ...>\n",
-        "inspect(sean)\n",
-        "\"%Example.User<name: \\\"Sean\\\", ...>\"\n",
-        "roles が出力から除外されました!\n",
+        "# alias モジュール名をエイリアスする\n",
         "\n",
-        "コンポジション(Composition)\n",
-        "さて、モジュールと構造体の作り方がわかったので、コンポジションを用いてモジュールや構造体に既存の機能を追加する方法を学びましょう。 Elixirは他のモジュールと連携する様々な方法を用意している\n",
-        "\n",
-        "alias\n",
-        "モジュール名をエイリアスすることができるElixirのコードでは頻繁に使われます:\n",
+        "%%writefile temp.exs\n",
         "\n",
         "defmodule Sayings.Greetings do\n",
         "  def basic(name), do: \"Hi, #{name}\"\n",
@@ -5258,79 +5370,266 @@
         "\n",
         "defmodule Example do\n",
         "  alias Sayings.Greetings\n",
-        "\n",
         "  def greeting(name), do: Greetings.basic(name)\n",
         "end\n",
         "\n",
+        "IO.puts Example.greeting \"Bob!!\"\n",
+        "\n",
         "# aliasを使わない場合\n",
         "\n",
-        "defmodule Example do\n",
-        "  def greeting(name), do: Sayings.Greetings.basic(name)\n",
+        "# defmodule Example do\n",
+        "#   def greeting(name), do: Sayings.Greetings.basic(name)\n",
+        "# end"
+      ],
+      "metadata": {
+        "id": "MCncJEQPnvUf",
+        "outputId": "b3414a14-7c73-4311-aeaf-84f2b2895d29",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.exs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "metadata": {
+        "id": "--jGGZGWq-0N",
+        "outputId": "c3d04d76-2ada-44a9-abe0-1f886d76f8fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi, Bob!!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 別名で alias したい時は `:as` を使う\n",
+        "%%writefile temp.exs\n",
+        "defmodule Sayings.Greetings do\n",
+        "  def basic(name), do: \"Hi, #{name}\"\n",
         "end\n",
-        "2つのエイリアス間で衝突があったり、全体を別名でエイリアスしたい場合には、 :as オプションを使います:\n",
         "\n",
         "defmodule Example do\n",
         "  alias Sayings.Greetings, as: Hi\n",
-        "\n",
         "  def print_message(name), do: Hi.basic(name)\n",
         "end\n",
-        "複数のモジュールを一度にエイリアスすることも可能です:\n",
         "\n",
-        "defmodule Example do\n",
-        "  alias Sayings.{Greetings, Farewells}\n",
-        "end\n",
-        "import\n",
-        "モジュールをエイリアスするよりも、関数を取り込みたいという場合には、 import を使います:\n",
+        "IO.puts Example.print_message \"Chris!!\""
+      ],
+      "metadata": {
+        "id": "BsbG9jcArVGG",
+        "outputId": "537aef50-dd57-4a10-b3c2-ec4f38a82e41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.exs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "metadata": {
+        "id": "XH-B-hGVrqHS",
+        "outputId": "bc9c40ab-7287-48e5-bcfc-8a9e6fb205f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi, Chris!!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 複数のモジュールを一度に alias する\n",
         "\n",
-        "last([1, 2, 3])\n",
-        "** (CompileError) iex:9: undefined function last/1\n",
-        "import List\n",
-        "nil\n",
-        "last([1, 2, 3])\n",
-        "3\n",
-        "フィルタリング\n",
-        "デフォルトでは全ての関数とマクロが取り込まれますが、 :only や :except オプションを使うことでフィルタすることができる\n",
-        "\n",
-        "特定の関数やマクロを取り込むには、名前/アリティのペアを :only や :except に渡す必要がありる last/1 で最後の関数のみを取り込んでみましょう:\n",
-        "\n",
+        "# defmodule Example do\n",
+        "#   alias Sayings.{Greetings, Farewells}\n",
+        "# end"
+      ],
+      "metadata": {
+        "id": "MHviUAtIqb9t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# import\n",
+        "# 関数を取り込みたいという場合には、 import を使う\n",
+        "!elixir -e 'import List; IO.inspect last([1,2,3])'"
+      ],
+      "metadata": {
+        "id": "nKBzB0T1r4Fs",
+        "outputId": "605087c3-dc87-4dc6-bd05-0e26c35f7a0e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# フィルタリング\n",
+        "# import のデフォルトでは全ての関数とマクロが取り込まれるが、 :only や :except でフィルタすることができる\n",
+        "# アリティを付ける必要がある\n",
+        "%%writefile temp.exs\n",
         "import List, only: [last: 1]\n",
-        "first([1, 2, 3])\n",
-        "** (CompileError) iex:13: undefined function first/1\n",
-        "last([1, 2, 3])\n",
-        "3\n",
-        "last/1 で指定された関数以外を全て取り込むには、同じ関数で試してみましょう:\n",
+        "IO.inspect last([1,2,3])\n",
+        "# IO.inspect first([1,2,3]) #=>  (CompileError) temp.exs:3: undefined function first/1 (there is no such import)"
+      ],
+      "metadata": {
+        "id": "OrvCY4AnsMnf",
+        "outputId": "54c52126-29ef-4c42-86cd-689f941b4b86",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.exs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "metadata": {
+        "id": "qrPAk7fvtOCt",
+        "outputId": "120b6201-d479-4151-9945-c67ac9973699",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# import には :functions と :macros という2つの特別なアトムもありるこれらはそれぞれ関数とマクロのみを取り込む\n",
         "\n",
-        "import List, except: [last: 1]\n",
-        "nil\n",
-        "first([1, 2, 3])\n",
-        "1\n",
-        "last([1, 2, 3])\n",
-        "** (CompileError) iex:3: undefined function last/1\n",
-        "名前/アリティのペアに加えて、 :functions と :macros という2つの特別なアトムもありるこれらはそれぞれ関数とマクロのみを取り込みます:\n",
+        "# import List, only: :functions\n",
+        "# import List, only: :macros"
+      ],
+      "metadata": {
+        "id": "A-c-MBYdtLwe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# require と import の違いがわからない\n",
+        "# まだロードされていないマクロを呼びだそうとすると、Elixirはエラーを発生させる\n",
+        "# とのこと\n",
         "\n",
-        "import List, only: :functions\n",
-        "import List, only: :macros\n",
-        "require\n",
-        "他のモジュールのマクロを使用することをElixirに伝えるために require を使うことができる import とのわずかな違いは、関数ではなくマクロを使用可能とすることです。\n",
-        "\n",
-        "defmodule Example do\n",
-        "  require SuperMacros\n",
-        "\n",
-        "  SuperMacros.do_stuff\n",
-        "end\n",
-        "まだロードされていないマクロを呼びだそうとすると、Elixirはエラーを発生させる\n",
-        "\n",
-        "use\n",
-        "use マクロを用いることで他のモジュールを利用して現在のモジュールの定義を変更することができる コード上で use を呼び出すと、実際には提供されたモジュールに定義されている __using__/1 コールバックを呼び出しる __using__/1 マクロの結果はモジュールの定義の一部になりる この動作に対する理解を深めるために簡単な例を見ましょう:\n",
+        "# defmodule Example do\n",
+        "#   require SuperMacros\n",
+        "# \n",
+        "#   SuperMacros.do_stuff\n",
+        "# end"
+      ],
+      "metadata": {
+        "id": "D_PC4H65uCz_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "KiJ2JQpYvM0z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# use\n",
+        "use マクロを用いることで他のモジュールを利用して現在のモジュールの定義を変更することができる コード上で use を呼び出すと、\n",
+        "実際には提供されたモジュールに定義されている __using__/1 コールバックを呼び出しる __using__/1 \n",
+        "マクロの結果はモジュールの定義の一部になりる この動作に対する理解を深めるために簡単な例を見ましょう:\n",
         "\n",
         "defmodule Hello do\n",
-        "  defmacro __using__(_opts) do\n",
+        "  defmacro __using__- do\n",
         "    quote do\n",
         "      def hello(name), do: \"Hi, #{name}\"\n",
         "    end\n",
         "  end\n",
         "end\n",
-        "ここでは hello/1 関数を定義する __using__/1 コールバックを定義した Hello モジュールを作りました。 この新しいコードを試すために新しいモジュールを作ります:\n",
+        "ここでは hello/1 関数を定義する __using__/1 コールバックを定義した Hello モジュールを作りました。 \n",
+        "この新しいコードを試すために新しいモジュールを作ります:\n",
         "\n",
         "defmodule Example do\n",
         "  use Hello\n",
@@ -5385,7 +5684,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "pg8PBjgIeIQw"
+        "id": "W2QZtjAku7nX"
       },
       "execution_count": null,
       "outputs": []
