Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMtQPIBXdxFCyKGZF0NORIF",
+      "authorship_tag": "ABX9TyMB+LLyZKec+k9iYGPfGC6V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5633,7 +5633,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5656,7 +5656,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5695,7 +5695,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5718,7 +5718,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5751,6 +5751,123 @@
       "cell_type": "code",
       "source": [
         "# mixとは Ruby の Bundler, RubyGems, Rake が組み合わさったようなもの\n",
+        "# colab の環境でやってみる\n",
+        "!mix new example\n",
+        "#=> \n",
+        "# * creating README.md\n",
+        "# * creating .formatter.exs\n",
+        "# * creating .gitignore\n",
+        "# * creating mix.exs\n",
+        "# * creating lib\n",
+        "# * creating lib/example.ex\n",
+        "# * creating test\n",
+        "# * creating test/test_helper.exs\n",
+        "# * creating test/example_test.exs\n",
+        "# \n",
+        "# Your Mix project was created successfully.\n",
+        "# You can use \"mix\" to compile it, test it, and more:\n",
+        "# \n",
+        "#     cd example\n",
+        "#     mix test\n",
+        "# \n",
+        "# Run \"mix help\" for more commands."
+      ],
+      "metadata": {
+        "id": "IfeH8cFvwdQl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# colab 環境ではシステムコマンドを 1 行の中で書かないとディレクトリ内の処理ができない\n",
+        "!cd example; mix test"
+      ],
+      "metadata": {
+        "id": "hm02EPK3MtYn",
+        "outputId": "c94dc2dc-8fa4-44e3-dc9d-e15f7df5c6d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Compiling 1 file (.ex)\n",
+            "Generated example app\n",
+            "\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\n",
+            "\n",
+            "Finished in 0.03 seconds (0.00s async, 0.03s sync)\n",
+            "\u001b[32m1 doctest, 1 test, 0 failures\u001b[0m\n",
+            "\n",
+            "Randomized with seed 325359\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cd example; ls -la"
+      ],
+      "metadata": {
+        "id": "zCivZ5oQN-lW",
+        "outputId": "e56a98b3-3320-40db-b10c-a3a97f4f61c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total 36\n",
+            "drwxr-xr-x 5 root root 4096 Mar 17 18:47 .\n",
+            "drwxr-xr-x 1 root root 4096 Mar 17 18:42 ..\n",
+            "drwxr-xr-x 3 root root 4096 Mar 17 18:47 _build\n",
+            "-rw-r--r-- 1 root root   97 Mar 17 18:42 .formatter.exs\n",
+            "-rw-r--r-- 1 root root  629 Mar 17 18:42 .gitignore\n",
+            "drwxr-xr-x 2 root root 4096 Mar 17 18:42 lib\n",
+            "-rw-r--r-- 1 root root  572 Mar 17 18:42 mix.exs\n",
+            "-rw-r--r-- 1 root root  469 Mar 17 18:42 README.md\n",
+            "drwxr-xr-x 2 root root 4096 Mar 17 18:42 test\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cd example; ls test"
+      ],
+      "metadata": {
+        "id": "dnf4PLfEOHYm",
+        "outputId": "5132de29-9163-4376-ffbb-70b67d9aef57",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "example_test.exs  test_helper.exs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
         "\n",
         "今まではもっぱら制限のある iex の内部で取り組んできました。何か実際に動くものを作るには、\n",
         "コードを複数のファイルに分けて効率的に管理する必要がありるそしてmixは複数のプロジェクトでそうした開発を支える\n",
@@ -5879,7 +5996,7 @@
         "Toggle"
       ],
       "metadata": {
-        "id": "IfeH8cFvwdQl"
+        "id": "DqnwfypGMEuC"
       },
       "execution_count": null,
       "outputs": []
