--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "learnelixir.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPGDmeh8hDvl2wnG3I18Wiv",
+      "authorship_tag": "ABX9TyMuIWTtlSC2vMEtX9jCKeJ8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +76,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 1,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -6414,7 +6413,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6444,7 +6443,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6467,7 +6466,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6491,7 +6490,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6524,13 +6523,65 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[2, 4, 6, 8, 10]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 偶数かつ 3 で割り切れる値のみをフィルタ\n",
+        "%%writefile temp.exs\n",
+        "import Integer\n",
+        "IO.inspect (\n",
+        "    for x <- 1..100,\n",
+        "        is_even(x),\n",
+        "        rem(x, 3) == 0, do: x)"
+      ],
+      "metadata": {
+        "id": "Mtu-mOqEG1xo",
+        "outputId": "6ea22d45-c74f-4115-dac2-e355122f084b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.exs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "metadata": {
+        "id": "Mq1pf9N3Kzl-",
+        "outputId": "8b8e65e7-107a-4447-900a-bf8851ceeb42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[6, 12, 18, 24, 30, 36, 42, 48, 54, 60, 66, 72, 78, 84, 90, 96]\n"
           ]
         }
       ]
@@ -6547,26 +6598,18 @@
     {
       "cell_type": "code",
       "source": [
-        "# 偶数かつ 3 で割り切れる値のみをフィルタ\n",
+        "# :into の使用\n",
         "\n",
         "\n",
         "\n",
-        "\n",
-        "フィルタは内包表記のためのある種のガードと考えることができます。フィルタされた値が false か nil を返す場合には、\n",
-        "最終的なリストから取り除かれます。ある範囲をループし偶数のみ気にすることにしましょう。値が偶数かどうかはIntegerモジュールの is_even/1 を用います。\n",
-        "\n",
-        "import Integer\n",
-        "for x <- 1..10, is_even(x), do: x\n",
-        "[2, 4, 6, 8, 10]\n",
-        "ジェネレータ同様、複数のフィルタを使うこともできます。先ほどの範囲を広げ、偶数かつ3で割り切れる値のみをフィルタしましょう。\n",
-        "\n",
-        "import Integer\n",
         "for x <- 1..100,\n",
         "  is_even(x),\n",
         "  rem(x, 3) == 0, do: x\n",
+        "\n",
         "[6, 12, 18, 24, 30, 36, 42, 48, 54, 60, 66, 72, 78, 84, 90, 96]\n",
         ":into の使用\n",
-        "リストではなく、他のものを生成したい場合はどうすれば良いでしょうか。 :into オプションを使えば可能です！ 一般的な目安として、 :into は Collectable プロトコルを実装している構造体を指定できます。\n",
+        "リストではなく、他のものを生成したい場合はどうすれば良いでしょうか。 :into オプションを使えば可能です！ 一般的な目安として、 \n",
+        ":into は Collectable プロトコルを実装している構造体を指定できます。\n",
         "\n",
         ":into を用いて、キーワードリストからマップを作成しましょう:\n",
         "\n",
@@ -6620,7 +6663,7 @@
         "© 2021 Sean Callan — @doomspork"
       ],
       "metadata": {
-        "id": "Mtu-mOqEG1xo"
+        "id": "kzeNx8rXKxS0"
       },
       "execution_count": null,
       "outputs": []
