Colaboratory を使用して作成しました

--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "learnelixir.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMClXd4VPxBOyFC3kb36aIa",
+      "authorship_tag": "ABX9TyMjc94bSVZWF2gT0roa0lJ2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +76,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 1,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -2511,7 +2510,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6673,15 +6672,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "WOp4jHsnK61f"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# 文字列"
       ],
       "metadata": {
@@ -6698,9 +6688,7 @@
         "!elixir -e 'IO.inspect <<104,101,108,108,111>>'\n",
         "!echo\n",
         "# 文字列に 0 バイトを追加するとバイナリとして表示される\n",
-        "!elixir -e 'IO.inspect <<104,101,108,108,111,0>>'\n",
-        "# 質問 文字列をバイナリ表示するにはどうするか\n",
-        "!elixir -e 'IO.inspect \"hello\"<> <<0>>'"
+        "!elixir -e 'IO.inspect <<104,101,108,108,111,0>>'"
       ],
       "metadata": {
         "id": "18LQnqpzwq5j",
@@ -6709,7 +6697,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6728,46 +6716,222 @@
     {
       "cell_type": "code",
       "source": [
+        "# 質問 文字列をバイナリ表示するにはどうするか\n",
+        "!elixir -e 'IO.inspect \"hello\"<> <<0>>'"
+      ],
+      "metadata": {
+        "id": "XNtMxkYTxIGV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 実験 日本語\n",
+        "!elixir -e 'IO.inspect \"あ\"<> <<0>>' #=> <<227, 129, 130, 0>>\n",
+        "!elixir -e 'IO.inspect <<227, 129, 130>>' #=> \"あ\""
+      ],
+      "metadata": {
+        "id": "Gy1ypWovxDeh",
+        "outputId": "92b9672e-4131-402e-bdad-1208901a978a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<<227, 129, 130, 0>>\n",
+            "\"あ\"\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 文字リスト\n",
         "# elixir は文字列と別に文字リストという型を別に持っている\n",
         "# 文字列はダブルクオートで生成され、文字リストはシングルクオートで生成される\n",
-        "内部ではElixirの文字列は文字の配列というよりはバイトのシーケンスとして表現されており、\n",
-        "Elixirは(複数の文字のリストである)文字リストという型を別に持っています。\n",
-        "Elixirの文字列はダブルクオートで生成され、一方文字リストはシングルクオートで生成されます。\n",
+        "# 文字リストは utf-8 で、文字列はバイナリである\n",
+        "!elixir -e \"IO.inspect 'hello'\"\n",
+        "!elixir -e \"IO.inspect 'hello' ++ [0]\"\n",
+        "!elixir -e 'IO.inspect \"hello\"<> <<0>>'\n",
+        "!echo\n",
+        "!elixir -e \"IO.inspect 'hełło' ++ [0]\"\n",
+        "!elixir -e 'IO.inspect \"hełło\"<> <<0>>'\n",
+        "!echo\n",
+        "!elixir -e \"IO.inspect 'あ' ++ [0]\"\n",
+        "!elixir -e 'IO.inspect \"あ\"<> <<0>>'"
+      ],
+      "metadata": {
+        "id": "5VB6NDnLiMYz",
+        "outputId": "c820a766-b0e1-41be-b82b-ba9d8aad2ddb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "'hello'\n",
+            "[104, 101, 108, 108, 111, 0]\n",
+            "<<104, 101, 108, 108, 111, 0>>\n",
+            "\n",
+            "[104, 101, 322, 322, 111, 0]\n",
+            "<<104, 101, 197, 130, 197, 130, 111, 0>>\n",
+            "\n",
+            "[12354, 0]\n",
+            "<<227, 129, 130, 0>>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# クエスチョンマークによるコードポイントの取得\n",
+        "# コードポイントは unicode なので 1 バイト以上のバイトである\n",
+        "!elixir -e 'IO.inspect ?Z'\n",
+        "!elixir -e 'IO.inspect ?あ'\n",
+        "!elixir -e 'IO.inspect \"áñèane\" <> <<0>>'\n",
+        "!elixir -e \"IO.inspect 'áñèane' ++ [0]\"\n",
+        "!elixir -e \"IO.inspect 'あいう' ++ [0]\""
+      ],
+      "metadata": {
+        "id": "9AAGG923x2YD",
+        "outputId": "0e77eb57-5f73-438b-dd7e-4b807c707701",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "90\n",
+            "12354\n",
+            "<<195, 161, 195, 177, 195, 168, 97, 110, 101, 0>>\n",
+            "[225, 241, 232, 97, 110, 101, 0]\n",
+            "[12354, 12356, 12358, 0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# シンボルには ? 表記が使える\n",
+        "# elixir でプログラムする時は通常文字リストは使わず文字列を使う\n",
+        "# 文字リストが必要なのは erlang のため\n",
+        "# String モジュールにコードポイントを取得する関数 graphemes/1 と codepoints/1 がある\n",
+        "!elixir -e 'string = \"\\u0061\\u0301\"; IO.puts string' #=> á\n",
+        "!elixir -e 'string = \"\\u0061\\u0301\"; IO.inspect String.codepoints string'\n",
+        "!elixir -e 'string = \"\\u0061\\u0301\"; IO.inspect String.graphemes string'"
+      ],
+      "metadata": {
+        "id": "Hvg6YQE4ziH0",
+        "outputId": "73cf88b2-9084-435b-ad27-376ad0ec9577",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "á\n",
+            "[\"a\", \"́\"]\n",
+            "[\"á\"]\n",
+            "あいう\n",
+            "[\"あ\", \"い\", \"う\"]\n",
+            "[\"あ\", \"い\", \"う\"]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 下記の実験から á と あ は違う\n",
+        "# á は graphemes では 1 文字だが codepoints では 2 文字\n",
+        "# あ はどちらでも 1 文字\n",
+        "!elixir -e 'string = \"あいう\"; IO.puts string' \n",
+        "!elixir -e 'string = \"あいう\"; IO.inspect String.codepoints string'\n",
+        "!elixir -e 'string = \"あいう\"; IO.inspect String.graphemes string'"
+      ],
+      "metadata": {
+        "id": "UDie3OTA4E9e"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "WOp4jHsnK61f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 文字列関数\n",
+        "# length/1\n",
+        "!elixir -e 'IO.puts String.length \"hello\"'\n",
+        "!elixir -e 'IO.puts String.length \"あいう\"'\n",
+        "# replace/3\n",
+        "!elixir -e 'IO.puts String.replace(\"Hello\", \"e\", \"a\")'\n",
+        "# duplicate/2\n",
+        "!elixir -e 'IO.puts String.duplicate(\"Oh my \", 3)'\n",
+        "# split/2\n",
+        "!elixir -e 'IO.inspect String.split(\"Oh my \", \" \")'\n",
+        "# split/1 # こちらが words 相当か\n",
+        "!elixir -e 'IO.inspect String.split(\"Oh my \")'"
+      ],
+      "metadata": {
+        "id": "UaUjeAiw3K3O",
+        "outputId": "6668a6bf-88cb-4df3-c4ea-dd9d47af8946",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "3\n",
+            "Hallo\n",
+            "Oh my Oh my Oh my \n",
+            "[\"Oh\", \"my\", \"\"]\n",
+            "[\"Oh\", \"my\"]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
-        "これらの違いは何でしょう？文字リストから得られる個々の値はバイナリで表現されているコードポイントで、UTF-8でエンコードされています。では掘り下げてみましょう:\n",
         "\n",
-        "'hełło'\n",
-        "[104, 101, 322, 322, 111]\n",
-        "\"hełło\" <> <<0>>\n",
-        "<<104, 101, 197, 130, 197, 130, 111, 0>>\n",
-        "322 は ł のコードポイントですが、UTF-8でエンコードされているので 197 、 130 という２つのバイトになっています。\n",
-        "\n",
-        "? を使って、文字のコードポイントを取得することができます。\n",
-        "\n",
-        "?Z\n",
-        "90\n",
-        "これにより、シンボルには ‘Z’ ではなく、 ?Z という表記を使用できることがわかります。\n",
-        "\n",
-        "Elixirでプログラムするときは通常は文字リストを使わず文字列を使います。文字リストがサポートされているのは一部のErlangモジュールがそれを必要としているからです。\n",
-        "\n",
-        "詳しい情報が必要なら公式の Getting Started Guide を見てください。\n",
-        "\n",
-        "書記素とコードポイント\n",
-        "コードポイントはただ単純にUnicodeの文字で、UTF-8のエンコーディングに応じて1バイト以上のバイトで表現されるものとして差し支えありません。ASCIIの範囲外の文字は常に2バイト以上にエンコードされます。例えば、 á, ñ, è のようなチルダやアクセントのついたラテン文字は2バイトにエンコードされます。アジアの言語の文字はしばしば3から4バイトにエンコードされます。書記素は一文字にレンダリングされる複数のコードポイントから成ります。\n",
-        "\n",
-        "Stringモジュールにはそれらを得るための2つの関数、 graphemes/1 と codepoints/1 が用意されています。例を見てみましょう:\n",
-        "\n",
-        "string = \"\\u0061\\u0301\"\n",
-        "\"á\"\n",
-        "\n",
-        "String.codepoints string\n",
-        "[\"a\", \"́\"]\n",
-        "\n",
-        "String.graphemes string\n",
-        "[\"á\"]\n",
-        "文字列関数\n",
-        "では、Stringモジュールにある重要で役に立つ関数をいくつか見てみましょう。このレッスンでは数ある関数のうち一部のみ扱います。全ての関数を確認したい場合は、公式ドキュメントの String を見てください。\n",
+        "では、Stringモジュールにある重要で役に立つ関数をいくつか見てみましょう。\n",
+        "このレッスンでは数ある関数のうち一部のみ扱います。全ての関数を確認したい場合は、公式ドキュメントの String を見てください。\n",
         "\n",
         "length/1\n",
         "書記素の長さを返します。\n",
@@ -6849,7 +7013,7 @@
         "Elixirで時間を扱ってみましょう。\n"
       ],
       "metadata": {
-        "id": "5VB6NDnLiMYz"
+        "id": "TBu1n_gF4uqo"
       },
       "execution_count": null,
       "outputs": []
