Colaboratory を使用して作成しました

--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPhLAHBBWjeGsykvO4a0sW3",
+      "authorship_tag": "ABX9TyM4sG45Qslq5uuRIFdqAaYj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,13 +36,11 @@
       "source": [
         "# メモ\n",
         "\n",
-        "gumi TECH Blog Elixir入門\n",
+        "gumi TECH Blog Elixir入門  \n",
+        "https://dev.to/gumi/elixerelixir-10g2  \n",
+        "https://dev.to/gumi/elixir-01--2585  \n",
         "\n",
-        "https://dev.to/gumi/elixir-13-aliasrequireimport-55c1\n",
-        "\n",
-        "を colab 化する。\n",
-        "\n",
-        "colab 環境で elixir のインタラクティブモード iex は使えないので、次の要領でインストールして使う。\n"
+        "colab 環境で elixir のインタラクティブモード iex は使えないので、次の要領でインストールして使う。"
       ]
     },
     {
@@ -95,7 +93,7 @@
         "---\n",
         "iex の代わりにシェルワンライナー `elixir -e` で実験する。\n",
         "\n",
-        "ほぼ iex と同じ環境が得られる、と思う。"
+        "ほぼ iex と同じ環境が得られる。"
       ]
     },
     {
@@ -132,7 +130,7 @@
         "%%writefile temp.exs\n",
         "IO.puts \"hello\" <> \" \" <> \"world\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +153,7 @@
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,21 +166,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "6TTEls3SfWhR"
-      },
       "source": [
-        "基本的な型 | 値の例\n",
-        "--- | ---\n",
-        "整数 | 1\n",
-        "整数(16進数) | 0x1F\n",
-        "小数 | 1.0\n",
-        "論理値 | true\n",
-        "アトム | :atom\n",
-        "文字列 | \"elixir\"\n",
-        "リスト | [1, 2, 3]\n",
-        "タプル | {1, 2, 3}"
-      ]
+        "**基本的な型**"
+      ],
+      "metadata": {
+        "id": "k2VkovkUCRTg"
+      }
     },
     {
       "cell_type": "code",
@@ -197,7 +186,7 @@
         "<tr><td>整数(16進数) </td><td> 0x1F</td></tr>\n",
         "<tr><td>小数 </td><td> 1.0</td></tr>\n",
         "<tr><td>論理値 </td><td> true</td></tr>\n",
-        "<tr><td>アトム </td><td> :atom</td></tr>\n",
+        "<tr><td>アトム</td><td> :atom</td></tr>\n",
         "<tr><td>文字列 </td><td> \"elixir\"</td></tr>\n",
         "<tr><td>リスト </td><td> [1, 2, 3]</td></tr>\n",
         "<tr><td>タプル </td><td> {1, 2, 3}</td></tr>\n",
@@ -210,13 +199,16 @@
           "height": 227
         },
         "id": "Vs9-8yqOKKgD",
-        "outputId": "b2b11838-56b1-45ee-dbaa-aa703381d778"
+        "outputId": "474c35cc-4eb1-44b9-c692-595be9fcc94b"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
             "text/html": [
               "<table border=\"1\">\n",
               "<thead>\n",
@@ -227,15 +219,12 @@
               "<tr><td>整数(16進数) </td><td> 0x1F</td></tr>\n",
               "<tr><td>小数 </td><td> 1.0</td></tr>\n",
               "<tr><td>論理値 </td><td> true</td></tr>\n",
-              "<tr><td>アトム </td><td> :atom</td></tr>\n",
+              "<tr><td>アトム</td><td> :atom</td></tr>\n",
               "<tr><td>文字列 </td><td> \"elixir\"</td></tr>\n",
               "<tr><td>リスト </td><td> [1, 2, 3]</td></tr>\n",
               "<tr><td>タプル </td><td> {1, 2, 3}</td></tr>\n",
               "</tbody>\n",
               "</table>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
             ]
           },
           "metadata": {}
@@ -252,10 +241,10 @@
         "outputId": "6ee53a72-b854-4bc6-d279-b9d4a285ff36"
       },
       "source": [
-        "# 除算 (演算子 `/` ) は結果が整数であっても、浮動小数点数に変わる。\n",
+        "# 除算 (演算子 `/` ) は結果が整数であっても、浮動小数点数に変わる\n",
         "!elixir -e 'IO.puts 10 / 2'"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,6 +265,7 @@
         "outputId": "1a385934-99dc-42c9-c5b5-f8767f5d04e2"
       },
       "source": [
+        "# 整数計算\n",
         "# 整数除算は div で 剰余は rem\n",
         "!elixir -e 'IO.puts div(9, 2)'\n",
         "!elixir -e 'IO.puts div 9, 2'\n",
@@ -287,7 +277,7 @@
         "!elixir -e 'IO.puts rem -10, 3'\n",
         "!elixir -e 'IO.puts rem 10, -3'"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,7 +313,7 @@
         "print (-10 % 3)\n",
         "print (10 % -3)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,7 +344,7 @@
         "!elixir -e 'IO.puts 0o10'\n",
         "!elixir -e 'IO.puts 0xFF'"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,7 +371,7 @@
         "!elixir -e 'IO.puts 1.0'\n",
         "!elixir -e 'IO.puts 3.14e-2'"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,7 +397,7 @@
         "!elixir -e 'IO.puts round(2.718)'\n",
         "!elixir -e 'IO.puts trunc(2.718)'"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,7 +435,7 @@
         "# Float.trunc (float, precision) はないので\n",
         "!elixir -e 'IO.puts trunc(2.718281828459045 * 1000) / 1000'"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,7 +498,7 @@
         "!elixir -e 'IO.puts rem 4,3'\n",
         "!elixir -e 'IO.puts min 4,3'"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,7 +554,7 @@
         "!elixir -e 'IO.puts :math.sin(:math.pi()/2)'\n",
         "!elixir -e 'IO.puts :math.log(:math.exp(2))'"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,7 +597,7 @@
         "!elixir -e 'IO.puts is_float 1.0'\n",
         "!elixir -e 'IO.puts is_number 0b1'"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,7 +642,7 @@
         "!elixir -e 'IO.inspect  nil'\n",
         "!elixir -e 'IO.puts !nil'"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
